APT-1868 fix splash screen + remove borders of tooltips + add formulas to zil calculations + fix scrollbars positionings mobile + desktop

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -571,8 +571,6 @@ button,
 
   background-color: rgba(51, 51, 51, 0.7) !important;
   backdrop-filter: blur(10px);
-
-  border: 1px solid #4b4b4b;
   z-index: 0;
   padding: 10px;
 }
@@ -586,7 +584,6 @@ button,
   height: 100%;
   background-color: rgba(51, 51, 51, 0.7) !important;
   backdrop-filter: blur(10px);
-  border: 1px solid #4b4b4b;
   top: 8px;
   z-index: 100;
 }
@@ -691,7 +688,7 @@ button,
 
 /* Nuclear approach to remove all backgrounds */
 .ant-notification *,
-.ant-notification *::before,
+.ant-notification *::befor e,
 .ant-notification *::after {
   background: transparent !important;
   background-color: transparent !important;
